--- a/a2/style.css
+++ b/a2/style.css
@@ -1,1 +1,287 @@
-/* Insert your styles here */
+@import url('https://fonts.googleapis.com/css2?family=Ballet&family=Inter:wght@200;300;400;600;700&family=Quicksand:wght@300;400;500&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --font-size-h1: 30px;
+    --font-size-h2: 20px;
+    --font-size-body: 15px;
+    --padding: 24px 40px;
+    --margin: 0 40px;
+    --radius: 10px;
+    --color-black: #000000;
+    --color-white: #ffffff;
+    --color-grey-primary: #969C9C;
+    --color-grey-secondary: #DBEDF3;
+    --color-blue-primary: #283149;
+    --color-blue-secondary: #262E45;
+    --color-blue-tertiary: #404B69;
+    --color-green: #00818A;
+}
+
+body {
+    background-color: var(--color-blue-primary);
+    font-family: 'Inter', sans-serif;
+}
+
+/* Grid layout */
+.grid-container {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+    'header header header header'
+    'nav nav nav nav'
+    'main main main main'
+    'footer footer footer footer';
+}
+
+/* Header */
+header {
+    grid-area: header;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: var(--color-blue-primary);
+    padding: var(--padding);
+    gap: 10px;
+}
+
+header img {
+    width: 65px;
+}
+
+header h1 {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 100;
+    font-size: 20px;
+    color: var(--color-grey-secondary);
+}
+
+.icon {
+    display: none;
+}
+
+/* Nav */
+nav {
+    grid-area: nav;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 4;
+    background-color: var(--color-blue-primary);
+}
+
+nav ul {
+    font-size: 0;
+}
+
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    padding: 14px 10px;
+}
+
+nav ul li a:link, nav ul li a:visited {
+    color: var(--color-grey-primary);
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Inter', sans-serif;
+    padding: 12px 16px;
+    font-size: 14px;
+}
+
+nav ul li a:hover, nav ul li a:active, nav ul li a:focus {
+    color: var(--color-grey-secondary);
+    border-bottom: 2px var(--color-grey-secondary) solid;
+}
+
+/* Main */
+main {
+    grid-area: main;
+    margin: 0 auto;
+    max-width: 1400px;
+}
+
+main section {
+    min-height: 100vh;
+}
+
+/* About Us */
+.about-us {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+    'background background'
+    'about about'
+    'article article'
+    'article article';
+}
+
+
+.about-us img {
+    margin: 0 auto;
+    grid-area: background;
+    grid-row: 2/3;
+    width: 50%;
+    border: #99FFFF solid 2px;
+
+}
+
+.about-us article:first-of-type {
+    grid-area: about;
+    margin: auto auto;
+    grid-row-start: 1;
+    color: var(--color-grey-secondary);
+    border: #99FFFF solid 2px;
+}
+
+.about-us article:first-of-type h1 {
+    font-size: 4vmin;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 100;
+}
+
+.about-us article:first-of-type p {
+    font-size: 10px;
+}
+
+.about-us article:last-of-type {
+    padding: var(--padding);
+    grid-area: article;
+    background-color: var(--color-blue-secondary);
+    column-span: 2;
+    border: #99FFFF solid 2px;
+}
+
+/* Seats and Prices */
+.seats-and-prices {
+    background-color: var(--color-grey-secondary);
+}
+
+/* Now Showing */
+.now-showing {
+
+}
+
+/* Footer */
+footer {
+    grid-area: footer;
+    background-color: var(--color-grey-secondary);
+    height: auto;
+    text-align: center;
+    font-size: 12px;
+    padding: var(--padding);
+}
+
+
+footer button {
+    border: none;
+    border-radius: var(--radius);
+    margin-top: 20px;
+    padding: 10px;
+    background-color: var(--color-blue-primary);
+    color: var(--color-grey-primary);
+}
+
+footer button:hover {
+    color: var(--color-grey-secondary);
+}
+
+
+/* Tablet: responsive layout */
+@media (max-width: 1000px) {
+}
+
+/* Mobile: responsive layout */
+@media screen and (max-width: 600px) {
+
+    /* Mobile: layout */
+    .grid-container {
+        grid-template-areas:
+      'header header header header'
+      'nav nav nav nav'
+      'main main main main'
+      'first-article first-article first-article first-article'
+      'second-article second-article second-article second-article'
+      'third-article third-article third-article third-article'
+      'fourth-article fourth-article fourth-article fourth-article'
+      'footer footer footer footer';
+    }
+
+    /* Mobile: Header */
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-content: baseline;
+        position: sticky;
+        z-index: 5;
+        top: 0;
+    }
+
+    header img {
+        display: none;
+    }
+
+    .icon {
+        display: block;
+    }
+
+    #iconClose {
+        display: none;
+    }
+
+    .fa-bars, .fa-close {
+        color: var(--color-grey-primary);
+        padding: 12px;
+    }
+
+    .fa-bars:hover {
+        color: var(--color-grey-secondary);
+    }
+
+    .fa-close:hover {
+        color: var(--color-grey-secondary);
+    }
+
+    /* Mobile: Nav */
+    nav {
+        display: none;
+    }
+
+    nav.responsive {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        bottom: 0;
+    }
+
+    nav.responsive ul {
+        width: 100%;
+    }
+
+    nav.responsive ul li {
+        display: block;
+    }
+
+    nav.responsive ul li a:link, nav.responsive ul li a:visited {
+        display: block;
+        font-size: 20px;
+    }
+
+    nav.responsive ul li a:hover, nav.responsive ul li a:active, nav.responsive ul li a:focus {
+        border-bottom: none;
+        background-color: var(--color-blue-secondary);
+        border-radius: 5px;
+        transition: 0.5s;
+    }
+}
