--- a/a3/css/media-screen-large.css
+++ b/a3/css/media-screen-large.css
@@ -115,7 +115,7 @@
         padding: 0 5em;
     }
 
-    section.book-ticket [type=text] {
+    section.book-ticket [type=text], section.book-ticket [type=email] {
         width: 49%;
     }
 
